fix: add padding to top of all pages on mobile

--- a/_sass/pages/_front-page.scss
+++ b/_sass/pages/_front-page.scss
@@ -2,6 +2,13 @@
 @import "compass/css3/transform";
 @import "mixins/mixin-image-ratio";
 
+$medium-down: "#{$screen} and (max-width:#{upper-bound($medium-range)})" !default;
+
+#content { 
+  @media #{$medium-down} {
+    padding: 80px 0px;
+  }
+}
 
 .slideshow-item {
   position: relative;
