--- a/_sass/pages/_mapeo-page.scss
+++ b/_sass/pages/_mapeo-page.scss
@@ -38,10 +38,6 @@ $medium-down: "#{$screen} and (max-width:#{upper-bound($medium-range)})" !defaul
       background-image: url("/assets/mapeo_hero.jpg");
     }
 
-    .page {
-      padding: 80px 0px;
-    }
-
     .download-buttons {
       li {
         padding: 10px 10px;
